@@ -3,6 +3,7 @@ X-editable changelog
 
 Version 1.4.6 wip
 ----------------------------
+[bug #312] can't apply selector more than once (vitalets)
 [enh #48] textarea: use `white-space: pre-wrap` instead of nl2br conversion (vitalets)
 [enh #286] added HTML5 time input (Doggie52)
 [enh] add `defaultValue` option (vitalets)
